stateDiagram-v2
  running --> idle
  running --> planned_downtime
  running --> unplanned_downtime
  running --> setup
  running --> blocked
  idle --> running
  idle --> planned_downtime
  idle --> unplanned_downtime
  idle --> setup
  idle --> blocked
  planned_downtime --> idle
  planned_downtime --> running
  planned_downtime --> unplanned_downtime
  planned_downtime --> setup
  unplanned_downtime --> idle
  unplanned_downtime --> running
  unplanned_downtime --> planned_downtime
  unplanned_downtime --> setup
  setup --> running
  setup --> idle
  setup --> unplanned_downtime
  setup --> blocked
  blocked --> running
  blocked --> idle
  blocked --> unplanned_downtime
  blocked --> setup
